# four-in-a-row

./: .gitignore  Makefile  README.md
game-frontend/: index.html  package-lock.json  package.json
game-frontend/src/: App.svelte  app.css
game-frontend/src/lib/: Board.svelte  BotGameControl.svelte  Footer.svelte  Game.svelte  GameButtons.svelte  GameEndScreen.svelte  GameSelector.svelte  Header.svelte  LocalGameControl.svelte  MultiplayerControl.svelte  Piece.svelte  Waiting.svelte  game-lib.js  stores.js
game-lib/: Cargo.toml
game-lib/src/: ai_players.rs  board.rs  lib.rs  minimax.rs
game-lib/src/board/: game_board_tests.rs
game-server/: Cargo.toml  Dockerfile
game-server/src/: ai.rs  main.rs  multiplayer.rs
game-server/static/: index.html
game-server/static/assets/: index-1qv3_LYx.css  index-3x_V5SN9.css  index-6zjjs6pl.css  index-FjjXjFmj.css  index-Nt780ryJ.css  index-SQ5oTcHs.js  index-TIXo2o2M.js  index-ThoAphQ7.js  index-f2cggdOL.css  index-hqgWVxM3.js  index-jVURkmUe.js  index-k729qWvm.js  index-p8C0KmhH.js  index-rGQ_vqJU.js  index-ucPOpOPh.css  index-x9kNuG8w.js
game-server/tests/: quick_dev.rs
