[package]
name = "game-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-server = {version = "0.6.0", features=["tls-rustls"]}
axum = "0.7.4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
game-lib = { path = "../game-lib" }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }

[dev-dependencies]
anyhow = "1"
axum-macros = "0.4.1"
httpc-test = "0.1.1"
